Margin spacing between columns needs fixing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-
 /* 1. Basic Element Styles 
 ---------------------------------------------------------------*/
 
@@ -18,7 +17,6 @@ h1 a {
 	padding: 31px 38px;
 	background-color: #4aaaa5;
 	color: white;
-	float: left;
 	text-decoration: none;
 	text-align: center;
 	font-size: 30px;
@@ -42,37 +40,32 @@ h3 {
 	margin-bottom: 24px;
 }
 
+a:hover {
+	text-decoration: none;
+	color: white;
+}
+
 /* 2. Navbar Styles 
 ---------------------------------------------------------------*/
 
-nav {
-	overflow: hidden;
+header {
 	background-color: #ffffff;
 	border-bottom: solid 2px #cccccc;
 	margin-bottom: 38px;
 }
 
-nav ul {
-	overflow: hidden;
-	width: 960px;
-	margin: 0 auto;
-}
-
-nav li {
-	float: right;
-}
-
-nav li a {
+.nav li a {
 	display: block;
 	color: #4aaaa5;
 	text-align: center;
 	padding: 37px 16px;
-	text-decoration: none;
+	text-decoration: none;	
 }
 
-nav li a:hover {
+.nav li a:hover {
 	background-color: #4aaaa5;
 	color: white;
+	border-radius: 0px;
 }
 
 /* 3. Main Styles 
@@ -81,27 +74,19 @@ nav li a:hover {
 p {
 	color: #777777;
 	line-height: 30px;
-}
-
-.container {
-	width: 960px;
-	margin: auto;
-	overflow: auto;
-	clear: both;
+	margin: 0 0 40px 0;
 }
 
 main {
-	width: 586px;
-	/*height: 586px;*/
 	background-color: #ffffff;
 	border: solid 2px #dddddd;
-	float: left;
-	padding: 30px;
-	margin: 0 20px 0 0;
+	padding: 0 0 30px 0;
 }
 
 img.headShot {
 	float: left;
+	width: 200px;
+	height: 150px;
 	margin: 0 30px 30px 0;
 }
 
@@ -109,18 +94,16 @@ img.headShot {
 ---------------------------------------------------------------*/
 
 aside {
-	width: 206px;
-	float: left;
 	border: solid 2px #dddddd;
 	background-color: #ffffff;
-	margin: 0 0 0 20px;
-	padding: 30px;
+	/*margin-left: 30px;*/
 }
 
 aside li {
 	width: 62px;
 	height: 62px;
 	vertical-align: top;
+	list-style: none;
 	float: left;
 }
 
@@ -141,14 +124,14 @@ aside li a:hover {
 	background-image: url(../images/icon_github.png);
 	background-size: 62px 62px;
 	background-repeat: no-repeat;
-	padding-right: 10px;
+	margin-right: 10px;
 }
 
 .stackoverflow {
 	background-image: url(../images/icon_stackoverflow.png);
 	background-size: 62px 62px;
 	background-repeat: no-repeat;
-	padding-right: 10px;
+	margin-right: 10px;
 }
 
 .linkedin {
@@ -163,6 +146,7 @@ aside li a:hover {
 form.contact ol li {
 	line-height: 30px;
 	margin-bottom: 11px;
+	list-style-type: none;
 }
 
 form.contact label {
@@ -179,13 +163,13 @@ form.contact input {
 
 form.contact textarea {
 	border: solid 1px #dddddd;
-	width: 562px;
+	width: 675px;
 	height: 200px;
 	padding: 11px;
 }
 
 form.contact button {
-	background: 4aaaa5;
+	background: #4aaaa5;
 	border: none;
 	color: #ffffff;
 	display: block;
@@ -198,7 +182,7 @@ form.contact button:hover {
 	background: #1e2506;
 	background: #666666;
 	cursor: pointer;
-}
+	}
 
 /* 6. Portfolio Styles 
 ---------------------------------------------------------------*/
@@ -206,6 +190,7 @@ form.contact button:hover {
 main.portfolio li {
 	float: left;
 	margin: 9px;
+	list-style-type: none;
 }
 
 main.portfolio figure {
@@ -214,13 +199,14 @@ main.portfolio figure {
 
 main.portfolio figcaption {
 	position: absolute;
-	bottom: 20px;
+	bottom: 10px;
 	background-color: #4aaaa5;
 	font-family: "Georgia", Times, "Times New Roman", Serif;
 	font-size: 18px;
 	color: white;
+	text-align: center;
 	padding: 20px;
-	width: 86%;
+	width: 100%;
 }
 
 /* 7. Footer Styles 
@@ -232,7 +218,6 @@ html, body {
 
 .container {
 	min-height: 100%;
-	/* equal to footer height */
 	margin-bottom: -142px; 
 }
 
@@ -255,6 +240,6 @@ html, body {
 	color: white;
 	border-top: solid 8px #4aaaa5;
 	margin: 40px 0 0 0;
-	height: 52px;
+	height: 102px;
 	padding: 42px 0 0 0;
 }
